// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deviceContentNav matches snapshot when the device is edge 1`] = `
<div
  className="nav-link-left"
  role="navigation"
>
  <TabList
    appearance="subtle"
    vertical={true}
  >
    <Tab
      as="a"
      href="#/identity/?deviceId=test"
      icon={<ServerRegular />}
      key="identity"
      value="identity"
    >
      breadcrumb.identity
    </Tab>
    <Tab
      as="a"
      href="#/twin/?deviceId=test"
      icon={<DocumentCopyRegular />}
      key="twin"
      value="twin"
    >
      breadcrumb.twin
    </Tab>
    <Tab
      as="a"
      href="#/events/?deviceId=test"
      icon={<ChatMultipleRegular />}
      key="events"
      value="events"
    >
      breadcrumb.events
    </Tab>
    <Tab
      as="a"
      href="#/methods/?deviceId=test"
      icon={<RemoteRegular />}
      key="methods"
      value="methods"
    >
      breadcrumb.methods
    </Tab>
    <Tab
      as="a"
      href="#/cloudToDeviceMessage/?deviceId=test"
      icon={<MailRegular />}
      key="cloudToDeviceMessage"
      value="cloudToDeviceMessage"
    >
      breadcrumb.cloudToDeviceMessage
    </Tab>
    <Tab
      as="a"
      href="#/moduleIdentity/?deviceId=test"
      icon={<BranchForkRegular />}
      key="moduleIdentity"
      value="moduleIdentity"
    >
      breadcrumb.moduleIdentity
    </Tab>
  </TabList>
</div>
`;

exports[`deviceContentNav matches snapshot when the device is not edge 1`] = `
<div
  className="nav-link-left"
  role="navigation"
>
  <TabList
    appearance="subtle"
    vertical={true}
  >
    <Tab
      as="a"
      href="#/identity/?deviceId=test"
      icon={<ServerRegular />}
      key="identity"
      value="identity"
    >
      breadcrumb.identity
    </Tab>
    <Tab
      as="a"
      href="#/twin/?deviceId=test"
      icon={<DocumentCopyRegular />}
      key="twin"
      value="twin"
    >
      breadcrumb.twin
    </Tab>
    <Tab
      as="a"
      href="#/events/?deviceId=test"
      icon={<ChatMultipleRegular />}
      key="events"
      value="events"
    >
      breadcrumb.events
    </Tab>
    <Tab
      as="a"
      href="#/methods/?deviceId=test"
      icon={<RemoteRegular />}
      key="methods"
      value="methods"
    >
      breadcrumb.methods
    </Tab>
    <Tab
      as="a"
      href="#/cloudToDeviceMessage/?deviceId=test"
      icon={<MailRegular />}
      key="cloudToDeviceMessage"
      value="cloudToDeviceMessage"
    >
      breadcrumb.cloudToDeviceMessage
    </Tab>
    <Tab
      as="a"
      href="#/moduleIdentity/?deviceId=test"
      icon={<BranchForkRegular />}
      key="moduleIdentity"
      value="moduleIdentity"
    >
      breadcrumb.moduleIdentity
    </Tab>
    <Tab
      as="a"
      href="#/ioTPlugAndPlay/?deviceId=test"
      icon={<PlugDisconnectedRegular />}
      key="ioTPlugAndPlay"
      value="ioTPlugAndPlay"
    >
      breadcrumb.ioTPlugAndPlay
    </Tab>
  </TabList>
</div>
`;
